--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="menu_slideshow">Soporte</string>
     <string name="menu_configuracion">Configuracion</string>
     <string name="menu_acercade">Acerca de</string>
+    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
     <string name="inicio_app_buscador">Buscar</string>
     <string name="inicio_app_recomendados">Precios de este mes</string>
     <string name="inicio_app_mejor_valorados">Mejor valorados</string>
